--- a/fkapp/fkapp/templates/admin/index.html
+++ b/fkapp/fkapp/templates/admin/index.html
@@ -2,8 +2,12 @@
 
 {% block body %}
 
+            <section id="menu1-text">
+                <p>menu1-text</p>
+            </section>
+        </div>
 
-<h1>首页</h1>
+
 
 
 {% endblock %}
