--- a/fkapp/fkapp/templates/admin/layout.html
+++ b/fkapp/fkapp/templates/admin/layout.html
@@ -5,6 +5,8 @@
     <title>后台管理</title>
     <link rel="stylesheet" href="{{ url_for('.static',filename='bootstrap/css/bootstrap.css') }} ">
     <link rel="stylesheet" href="{{ url_for('.static',filename='bootstrap/css/bootstrap-responsive.css') }} ">
+    <!-- 自定义 -->
+    <link rel="stylesheet" href="{{ url_for('.static',filename='bootstrap/css/doc.css') }} ">
 </head>
 <body>
 
@@ -34,11 +36,28 @@
 </div>
 
 
-<!-- content body -->
+    <div class="row">
 
+        <div class="span3 bs-docs-sidebar">
+            <ul class="nav nav-list bs-docs-sidenav affix">
+                <li class="active"><a href="#download-bootstrap"><i class="icon-chevron-right"></i>首页</a></li>
+                <li><a href="{{url_for('users')}}"><i class="icon-chevron-right"></i>用户</a></li>
+                <li><a href="{{url_for('shops')}}"><i class="icon-chevron-right"></i>Shops</a></li>
+                <li><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
+                <li><a href="#examples"><i class="icon-chevron-right"></i> Examples</a></li>
+                <li><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
+            </ul>
+        </div>
+
+
+<!-- content body -->
+        <div class="span8 well">
 		{% block body %}
 		{% endblock %}
+        </div>
 
+
+    </div>
 
 <div>
 
