--- a/fkapp/fkapp/templates/admin/users.html
+++ b/fkapp/fkapp/templates/admin/users.html
@@ -2,19 +2,72 @@
 
 {% block body %}
 
-<h1>用户列表</h1>
+<h3>用户列表</h3>
+<table class="table table-bordered">
+    <thead>
+    <tr>
+        <th>编号</th><th>Title</th><th>Address</th><th>管理</th>
+    </tr>
+    <tr>
+        <td>1</td><td>1</td><td>1</td><td>1</td>
+    </tr>
+    </thead>
+
+</table>
 
 
-<form method="post" action="">
-    <p>
-       <input type="text" name="username" id="username"/>
-    </p>
-    <p>
-        <input type="text" name="password" id="password"/>
-    </p>
-    <p>
-        <input type="submit" value="提交"/>
-    </p>
-</form>
+
+<div id="sign">
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <ul>
+        {% for message in messages %}
+        <li>{{ message[1] }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+
+
+    {% if form.errors %}
+    <p class=error><strong>Your form contains errors.</strong>
+
+    <ul class=errors>
+        {% for error in form.errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+    </ul>
+
+    {% endif %}
+    <form method="post" action="">
+        {{ form.hidden_tag() }}
+        <table class="table">
+            <tbody>
+            <tr>
+                <td>{{ form.username.label }}</td>
+                <td>{{ form.username(size=30) }} </td>
+            </tr>
+            <tr>
+                <td>{{ form.password.label }}</td>
+                <td>{{ form.password(size=30)}}</td>
+            </tr>
+            <tr>
+                <td>{{form.nickname.label}}</td>
+                <td>{{form.nickname(size=30)}}</td>
+            </tr>
+            <tr>
+                <th></th>
+                <td>{{ form.submit }}</td>
+            </tr>
+            </tbody>
+        </table>
+    </form>
+</div>
+
+
+
+
+
 
 {% endblock %}
