--- a/fkapp/fkapp/templates/admin/layout.html
+++ b/fkapp/fkapp/templates/admin/layout.html
@@ -41,16 +41,17 @@
         <div class="span3 bs-docs-sidebar">
             <ul class="nav nav-list bs-docs-sidenav affix">
                 <li class="active"><a href="#download-bootstrap"><i class="icon-chevron-right"></i>首页</a></li>
+                <li><a href="{{url_for('categories')}}"><i class="icon-chevron-right"></i>分类</a></li>
                 <li><a href="{{url_for('users')}}"><i class="icon-chevron-right"></i>用户</a></li>
                 <li><a href="{{url_for('shops')}}"><i class="icon-chevron-right"></i>Shops</a></li>
                 <li><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
                 <li><a href="#examples"><i class="icon-chevron-right"></i> Examples</a></li>
-                <li><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
+                <li><a href="{{url_for('initdata')}}"><i class="icon-chevron-right"></i>初始数据</a></li>
             </ul>
         </div>
 
 
-<!-- content body -->
+        <!-- content body -->
         <div class="span8 well">
 		{% block body %}
 		{% endblock %}
