--- a/fkapp/fkapp/templates/admin/shops.html
+++ b/fkapp/fkapp/templates/admin/shops.html
@@ -1,6 +1,9 @@
 {% extends "admin/layout.html" %}
 
 {% block body %}
+    <div>
+        <h3>Shop 列表 <a href="#" class="btn btn-success">新增</a> </h3>
+    </div>
     <table class="table table-bordered">
         <thead>
             <tr>
