--- a/fkapp/fkapp/templates/admin/users.html
+++ b/fkapp/fkapp/templates/admin/users.html
@@ -1,8 +1,9 @@
 {% extends "admin/layout.html" %}
 
 {% block body %}
-
-<h3>用户列表</h3>
+<div>
+    <h3>User 列表 <a href="#" class="btn btn-success">新增</a> </h3>
+</div>
 <table class="table table-bordered">
     <thead>
     <tr>
@@ -14,60 +15,7 @@
     </thead>
 
 </table>
-
-
-
-<div id="sign">
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    <ul>
-        {% for message in messages %}
-        <li>{{ message[1] }}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
-
-
-    {% if form.errors %}
-    <p class=error><strong>Your form contains errors.</strong>
-
-    <ul class=errors>
-        {% for error in form.errors %}
-        <li>{{ error }}</li>
-        {% endfor %}
-    </ul>
-
-    {% endif %}
-    <form method="post" action="">
-        {{ form.hidden_tag() }}
-        <table class="table">
-            <tbody>
-            <tr>
-                <td>{{ form.username.label }}</td>
-                <td>{{ form.username(size=30) }} </td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label }}</td>
-                <td>{{ form.password(size=30)}}</td>
-            </tr>
-            <tr>
-                <td>{{form.nickname.label}}</td>
-                <td>{{form.nickname(size=30)}}</td>
-            </tr>
-            <tr>
-                <th></th>
-                <td>{{ form.submit }}</td>
-            </tr>
-            </tbody>
-        </table>
-    </form>
-</div>
-
-
-
-
-
-
 {% endblock %}
+
+
+
