--- a/flaskweb/mysite/templates/admin/itemlist.html
+++ b/flaskweb/mysite/templates/admin/itemlist.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>管理MESSAGE列表</title>
-    <meta charset="utf-8">
-</head>
-<body>
-<h2>Item list </h2>
-</body>
-</html>
+{% extends "admin/layout.html" %}
+{%- block content %}
+<div class="row-fluid">
+    <div class="span9">
+        <h2>items list</h2>
+    </div>
+</div>
+{% endblock %}
