--- a/flaskweb/mysite/templates/admin/categorylist.html
+++ b/flaskweb/mysite/templates/admin/categorylist.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>管理分类列表</title>
-    <meta charset="utf-8">
-</head>
-<body>
-<h2>分类列表</h2>
-</body>
-</html>
+{% extends "admin/layout.html" %}
+{%- block content %}
+<div class="row-fluid">
+    <div class="span9">
+        <h2>category list</h2>
+    </div>
+</div>
+{% endblock %}
+
